compiler/tools/fpp-check/test/state_machine/undef/choice_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/undef/choice_error.fpp:3.17
  initial enter C
                ^
error: cannot find symbol `C`
note: looking for a state here
